[package]
name = "cg-sys"
version = "0.1.0"
authors = ["noshu <naushad1290@gmail.com>"]
description = "The package provides an interface to CG+ fortran routine"
homepage = "https://github.com/noshu/cg-sys"
repository = "https://github.com/noshu/cg-sys"
build = "build.rs"
[features]
static = []
[dependencies]
libc = "*"